// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Component service endpoint returns a component renders the page 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Component Name 1 - Downstream Response Times
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div>
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-info"
          role="alert"
        >
          <!---->
          
      No response times are available for this component. Possibly the
      component may not have been integrated with Zipkin yet.
    
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when Get Summary service endpoint returns a summary with sub component dependencies when the sub component dependencies are for a different component renders no response times 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Component Name 3 - Downstream Response Times
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div
    sub-component-dependencies="[object Object]"
  >
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-info"
          role="alert"
        >
          <!---->
          
      No response times are available for this component. Possibly the
      component may not have been integrated with Zipkin yet.
    
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when Get Summary service endpoint returns a summary with sub component dependencies when the sub component dependencies are for the same component renders the response times 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    
    Test Component Name 1 - Downstream Response Times
  
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
       Info 
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/diagrams"
      target="_self"
    >
      
    Diagrams
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      
    Errors
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      
    Tests
  
    </a>
  </div>
   
  <div
    sub-component-dependencies="[object Object]"
  >
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-info"
          role="alert"
        >
          <!---->
          
      No response times are available for this component. Possibly the
      component may not have been integrated with Zipkin yet.
    
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
